functionality update: added signin as guest; user cannot remove all permissions from any one user; registration defaults to give access to tysons biergarten

--- a/dmrApp/templates/login.html
+++ b/dmrApp/templates/login.html
@@ -51,6 +51,11 @@
                 <a href="{{ url_for('users.reset_password') }}">forgot password?</a>
             </small>
         </div>
+		
+		<div class='login_as_guest'>
+			<a href="{{ url_for('users.login', email_entry=guest_email, pass_entry=guest_password ) }}">
+				Login as guest</a>
+		</div>
 
     </form>
 </div>
