--- a/dmrApp/static/main.css
+++ b/dmrApp/static/main.css
@@ -118,6 +118,15 @@ grid-template-areas:
 .headerPic {
     max-width: 100%;
     max-height: 100%;}
+	
+.login_as_guest{
+	background-color: rgb(20, 20, 20);
+	border-radius: 3em;
+	width:150px;
+	padding-left:20px;
+	padding-top:5px;
+	height:40px;
+}
 /*End Nick miscellaneous*/
 
 
